<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <androidx.constraintlayout.widget.Guideline
    android:id="@+id/gl_zeroQuarter"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    app:layout_constraintGuide_percent="0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_firstQuarter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_secondQuarter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_thirdQuarter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.75" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_firstColoumn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.33" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_secondColoumn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent= "0.66" />



    <Button
        android:id="@+id/btn_lightGreen"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/light_green"
        android:text="@string/lightgreen"
        android:fontFamily="serif"


        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/gl_firstQuarter"
        app:layout_constraintTop_toBottomOf="@id/gl_zeroQuarter"
        app:layout_constraintEnd_toEndOf="@id/gl_firstColoumn"
        />

    <Button
        android:id="@+id/btn_orange"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/orange"
        android:text="@string/orange"
        android:fontFamily="serif"


        app:layout_constraintStart_toEndOf="@id/gl_firstColoumn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/gl_firstQuarter"
        app:layout_constraintTop_toBottomOf="@id/gl_zeroQuarter"
        />

    <Button
        android:id="@+id/btn_lightBlue"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/light_blue"
        android:text="@string/lightblue"
        android:fontFamily="serif"


        app:layout_constraintEnd_toStartOf="@id/gl_secondColoumn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gl_firstQuarter"
        app:layout_constraintBottom_toTopOf="@id/gl_secondQuarter"

        />

    <Button
        android:id="@+id/btn_red"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/red"
        android:text="@string/red"
        android:fontFamily="serif"


        app:layout_constraintStart_toEndOf="@id/gl_secondColoumn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gl_firstQuarter"
        app:layout_constraintBottom_toTopOf="@id/gl_secondQuarter"
        />

    <Button
        android:id="@+id/btn_darkGreen"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/dark_green"
        android:text="@string/darkGreen"
        android:fontFamily="serif"


        app:layout_constraintTop_toBottomOf="@id/gl_secondQuarter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/gl_secondColoumn"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <Button
        android:id="@+id/btn_yellow"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/yellow"
        android:text="@string/yellow"
        android:fontFamily="serif"


        app:layout_constraintEnd_toStartOf="@id/gl_secondColoumn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gl_secondQuarter"
        app:layout_constraintBottom_toTopOf="@id/gl_thirdQuarter"
        />

    <Button
        android:id="@+id/btn_pink"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/pink"
        android:text="@string/pink"
        android:fontFamily="serif"

        app:layout_constraintEnd_toStartOf="@id/gl_firstColoumn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gl_thirdQuarter"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <Button
        android:id="@+id/btn_purple"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/purple"
        android:text="@string/purple"
        android:fontFamily="serif"


        app:layout_constraintEnd_toStartOf="@id/gl_secondColoumn"
        app:layout_constraintStart_toStartOf="@id/gl_firstColoumn"
        app:layout_constraintTop_toBottomOf="@id/gl_thirdQuarter"
        app:layout_constraintBottom_toBottomOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>
